--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/uuid": "^9.0.8",
     "jest": "^29.7.0",
     "socket.io-client": "^4.7.4",
-    "ts-jest": "^29.1.2"
+    "ts-jest": "^29.1.2",
+    "wait-for-expect": "^3.0.2"
   }
 }
